@@ -54,7 +54,7 @@ executed program. It takes the following arguments:
 
 B<'Program'> (required), will be passed to POE::Wheel::Run's constructor.
 
-B<'CopyINC'> (optional), if true, a new instance of the active Perl
+B<'AltFork'> (optional), if true, a new instance of the active Perl
 interpreter (C<$^X>) will be launched with B<'Program'> (which must be a
 string) as the code (I<-e>) argument, and the current C<@INC> passed as
 include (I<-I>) arguments. Default is false.
